DX/dev/force-app/main/default/objects/ForValidationRule__c/ForValidationRule__c.object-meta.xml
<CustomObject>
    <description>入力規則検証用</description>
    <label>入力規則検証用</label>
    <nameField>
        <label>入力規則検証用</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>