DX/dev/force-app/main/default/objects/ForValidationRule__c/fields/CustomSetting__c.field-meta.xml
<CustomField>
    <fullName>CustomSetting__c</fullName>
    <formula>$Setup.TestCustomSetting__c.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【数式】カスタム設定</label>
    <type>Text</type>
</CustomField>