DX/dev/force-app/main/default/objects/ForValidationRule__c/fields/DualListBox__c.field-meta.xml
<CustomField>
    <fullName>DualListBox__c</fullName>
    <label>複数選択リスト</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ワイン</fullName>
                <default>true</default>
                <label>ワイン</label>
            </value>
            <value>
                <fullName>ビール</fullName>
            </value>
            <value>
                <fullName>葡萄酒</fullName>
            </value>
            <value>
                <fullName>ジン</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>