DX/dev/force-app/main/default/objects/ForValidationRule__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>数式(数値)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>