DX/dev/force-app/main/default/objects/ForValidationRule__c/fields/HeadSpace__c.field-meta.xml
<CustomField>
    <fullName>HeadSpace__c</fullName>
    <formula>&quot; &quot; &amp; &quot;&lt;-スペース&quot;</formula>
    <label>先頭スペース</label>
    <type>Text</type>
</CustomField>