DX/dev/force-app/main/default/objects/ForValidationRule__c/fields/LongTextArea1__c.field-meta.xml
<CustomField>
    <fullName>LongTextArea1__c</fullName>
    <label>ロングテキストエリア1</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>