DX/dev/force-app/main/default/objects/ForValidationRule__c/validationRules/aaaa.validationRule-meta.xml
<ValidationRule>
    <fullName>aaaa</fullName>
    <active>false</active>
    <errorConditionFormula>IF (ISCHANGED(Select__c), False, True)</errorConditionFormula>
    <errorMessage>同値です</errorMessage>
</ValidationRule>