DX/dev/force-app/main/default/objects/ForValidationRule__c/validationRules/Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Checked</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(ISCHANGED(Select__c),ISCHANGED(Date__c)),CheckBox__c,FALSE)</errorConditionFormula>
    <errorMessage>チェックボックスがTRUEの場合は変更不可</errorMessage>
</ValidationRule>